# my-financial-companion-bot

./: .gitignore  LICENSE  pyproject.toml
src/my_financial_companion_bot/: Home.py  db_utils.py
src/my_financial_companion_bot/managers/: transaction_manager.py
src/my_financial_companion_bot/models/: transaction.py  transaction_type.py
src/my_financial_companion_bot/pages/: 1_💲_Transactions.py
tests/: conftest.py  test_db.py
tests/managers/: transaction_manager_test.py
