[tool.poetry]
name = "my-financial-companion-bot"
version = "0.1.0"
description = ""
authors = ["rrodero <rrodero@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.45.1"
pandas = "^2.2.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
